dataset1235/2025-2/805158916/users/2200760145/executions/3435325918_359761547.log
== SUBMISSION (2025-09-03 14:40:31)
-- CODE: 
idade = int(input("insira sua idade"))
print(idade)
if(idade >= 2):
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:05:40)
-- CODE: 
idade = int(input("insira sua idade"))
print(idade)
if(idade >= 2):
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:39:55)
-- CODE: 
idade = int(input("insira sua idade"))
print(idade)
if(idade >= 2):
  print("paga")
else(idade < 2 ):
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:08:20)
-- CODE: 
idade = int(input("insira sua idade"))
print(idade)
if(idade >= 2):
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:36:37)
-- CODE: 
idade(int(input("insira sua idade")))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade(int(input("insira sua idade")))
    ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade(int(input("insira sua idade")))
    ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade(int(input("insira sua idade")))
    ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade(int(input("insira sua idade")))
    ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade(int(input("insira sua idade")))
    ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade(int(input("insira sua idade")))
    ^^^^^
NameError: name 'idade' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:39:16)
-- CODE: 
idade = (int(input("insira sua idade")))
if(idade >= 2):
  print("paga")
else(idade < 2 ):
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 4
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 4
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:39:57)
-- CODE: 
idade = int(input("insira sua idade"))
print(idade)
if(idade >= 2):
  print("paga")
else(idade < 2 ):
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else(idade < 2 ):
        ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
